--- a/styles.css
+++ b/styles.css
@@ -4,4 +4,58 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  font-family: 'Ubuntu', sans-serif;
+}
+
+
+
+header {
+  background-color: gray;
+  text-align: center;
+  height: 6vh;
+  font-size: 2rem;
+
+}
+
+nav {
+  background-color: lightgray;
+  display: flex;
+  flex-direction: column;
+  gap: 8rem;
+  padding-bottom: 3rem;
+  text-align: center;
+  justify-content: center;
+  width: 10vw;
+  height: 94vh;
+
+
+}
+
+nav button {
+  background-color: lightgray;
+  border: none;
+  cursor: pointer;
+  font-size: 1rem;
+  font-weight: bold;
+
+}
+
+
+ul {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  flex-direction: column;
+  gap: 2rem;
+  margin-top: 2rem;
+}
+
+
+@media (max-width: 800px){
+  nav {
+    width: fit-content
+  }
+    
+
 }
