--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,11 @@ header {
 
 }
 
+main{
+  display: flex;  
+}
+
+
 nav {
   background-color: lightgray;
   display: flex;
@@ -50,6 +55,79 @@ ul {
   gap: 2rem;
   margin-top: 2rem;
 }
+
+.mainContent{
+  background-color: aqua;
+  width: 100%;
+  
+}
+
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: none;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+  
+}
+
+.taskPopUp {
+  
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  z-index: 1;
+  transform: translate(-50%, -50%) scale(1);
+  transition: 0.2s ease-in-out; 
+}
+
+.popUpActive{
+  transform: translate(-50%, -50%) scale(1); 
+  
+}
+
+.taskPopUp form {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  border-radius: 10%;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  background-color: gray;
+  padding: 1rem;
+  font-size: 1rem;
+  border: none;
+}
+
+.taskPopUp button,input,textarea{
+  
+  font-size: 1rem;
+  border: none;
+  padding: 0.5rem;
+}
+
+
+
+
+.priorityDiv,.PopupBtn {
+  display: flex;
+  gap: 0.5rem;
+ 
+}
+
+
+
+
+
+
+
+
+
+
 
 
 @media (max-width: 800px){
