--- a/styles.css
+++ b/styles.css
@@ -56,6 +56,10 @@ ul {
   margin-top: 2rem;
 }
 
+.projectsDiv{
+  overflow: auto;
+}
+
 .mainContent{
   background-color: aqua;
   width: 100%;
@@ -108,6 +112,12 @@ ul {
   font-size: 1rem;
   border: none;
   padding: 0.5rem;
+  cursor: pointer;
+  }
+
+#taskContent,#taskTitle,#projectInput{
+ width: 100%;
+
 }
 
 
