--- a/styles.css
+++ b/styles.css
@@ -18,8 +18,8 @@ header {
 
 }
 
-main{
-  display: flex;  
+main {
+  display: flex;
 }
 
 
@@ -31,7 +31,7 @@ nav {
   padding-bottom: 3rem;
   text-align: center;
   justify-content: center;
-  width: 10vw;
+  width: 15vw;
   height: 94vh;
 
 
@@ -51,45 +51,45 @@ ul {
   list-style: none;
   display: flex;
   justify-content: center;
-  text-align: center;
+  text-align:left;
+  padding-left: 2rem;
   flex-direction: column;
   gap: 2rem;
   margin-top: 2rem;
 }
 
-.projectsDiv{
-  overflow: auto;
-}
 
-.mainContentGrid{
-  background-color:whitesmoke;
+
+.mainContentGrid {
+  background-color: whitesmoke;
   width: 100%;
-    
+
 }
 
-.mainContent{
+.mainContent {
   padding: 2.5rem 5rem;
 
 }
 
-.mainContent h3{
+.mainContent h3 {
   padding-bottom: 1rem;
 }
 
-.taskDiv{
+.taskDiv {
   display: flex;
   justify-content: space-between;
   background-color: lightgray;
   padding: 0.3rem;
 
-  }
+}
 
-  .leftSide,.rightSide{
-    display: flex;
-    gap:1rem;
-  }
+.leftSide,
+.rightSide {
+  display: flex;
+  gap: 1rem;
+}
 
-  
+
 
 .overlay {
   position: fixed;
@@ -99,22 +99,22 @@ ul {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.8);
-  
+
 }
 
 .taskPopUp {
-  
+
   position: fixed;
   top: 50%;
   left: 50%;
   z-index: 1;
   transform: translate(-50%, -50%) scale(0);
-  transition: 0.2s ease-in-out; 
+  transition: 0.2s ease-in-out;
 }
 
-.popUpActive{
-  transform: translate(-50%, -50%) scale(1); 
-  
+.popUpActive {
+  transform: translate(-50%, -50%) scale(1);
+
 }
 
 .taskPopUp form {
@@ -131,26 +131,47 @@ ul {
   border: none;
 }
 
-.taskPopUp button,input,textarea{
-  
+.taskPopUp button,
+input,
+textarea {
+
   font-size: 1rem;
   border: none;
   padding: 0.5rem;
   cursor: pointer;
-  }
+}
 
-#taskContent,#taskTitle,#taskProject{
- width: 100%;
+#taskContent,
+#taskTitle,
+#taskProject {
+  width: 100%;
 
 }
 
 
-
-
-.priorityDiv,.PopupBtn {
+.priorityDiv,
+.PopupBtn {
   display: flex;
   gap: 0.5rem;
- 
+}
+
+
+#projectsDiv {
+  padding-top: 1rem;
+  padding-left: 1rem;
+  gap:0.7rem;
+  display: flex;
+  align-items:flex-start;
+  justify-content: center;
+  flex-direction: column;
+  font-size: 0.8rem;
+  max-height: 10rem;
+  overflow: auto;
+  
+}
+
+#projectsDiv div{
+  cursor: pointer; 
 }
 
 
@@ -164,10 +185,13 @@ ul {
 
 
 
-@media (max-width: 800px){
+
+
+
+@media (max-width: 800px) {
   nav {
     width: fit-content
   }
-    
+
 
 }
